--- a/Project test.csproj
+++ b/Project test.csproj
@@ -7,4 +7,12 @@
     <RootNamespace>Project_test</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Pages\NewFolder\" />
+  </ItemGroup>
+
 </Project>
